--- a/shop/shop.html
+++ b/shop/shop.html
@@ -443,7 +443,7 @@
                                         </a>
                                         
                                     </div>
-                                    <div class="no-results-message">Không tìm thấy sản phẩm phù hợp.</div>
+                                    <div class="no-results-message" style="display: none;">Không tìm thấy sản phẩm phù hợp.</div>
 
                                 </div>
                             </div>
