--- a/base/footer.html
+++ b/base/footer.html
@@ -288,6 +288,7 @@
                         <span class="footer-basic-info-paragraph footer-basic-info-paragraph-info">Chịu Trách Nhiệm Quản Lý Nội Dung: Nguyễn Đức Trí -  Điện thoại liên hệ: 024 73081221 (ext 4678)</span>
                         <span class="footer-basic-info-paragraph footer-basic-info-paragraph-info">Mã số doanh nghiệp: 0106773786 do Sở Kế hoạch & Đầu tư TP Hà Nội cấp lần đầu ngày 10/02/2015</span>
                         <span class="footer-basic-info-paragraph footer-basic-info-paragraph-info">© 2015 - Bản quyền thuộc về Công ty TNHH Shopee</span>
+                        <span class="footer-basic-info-paragraph footer-basic-info-paragraph-info">Designed by @hoangg_trn</span>
                     </div>
                 </div>
             </div>
