--- a/product/product5.html
+++ b/product/product5.html
@@ -25,7 +25,7 @@
                     </li>
                     
                     <li class="product-path-item">
-                        <a class="product-path-link" href="/shop.html">Máy Ảnh & Máy Quay Phim</a><i class="product-path-icon fa-solid fa-chevron-right"></i>
+                        <a class="product-path-link" href="/shop/shop.html">Máy Ảnh & Máy Quay Phim</a><i class="product-path-icon fa-solid fa-chevron-right"></i>
                     </li>
                     <li class="product-path-item">
                         <a class="product-path-link" href="">Máy ảnh - Máy quay phim</a><i class="product-path-icon fa-solid fa-chevron-right"></i>
