--- a/base/header.html
+++ b/base/header.html
@@ -95,7 +95,7 @@
                         <a href="" class="header-search-history-link">Búp bê bằng bông biết bay bay bay</a>
                         <a href="" class="header-search-history-link">Một con vịt xòe ra hai cái cánh</a>
                     </div>
-                    <button class="search-btn" onclick="handleSearchInput()" >
+                    <button class="search-btn" onclick="performSearch()">
                         <i class="search-logo fa-solid fa-magnifying-glass fa-xl"></i>
                     </button>
                     <div class="hearder-suggest">
