--- a/product/product1.html
+++ b/product/product1.html
@@ -148,6 +148,12 @@
                       </div>
                   </div>
               </div>
+              <div id="successMessage" class="success-message">
+                <div class="success-message-box">
+                    <img class="success-message-img" src="https://img.freepik.com/free-icon/checked_318-197857.jpg" alt="">
+                    <span class="success-message-text">Sản phẩm đã được thêm vào Giỏ hàng</span>
+                </div>
+              </div>
               <div class="product-details">
                   <div class="product-shop-info"></div>
                   <div class="product-specification">
