--- a/base/header.html
+++ b/base/header.html
@@ -139,39 +139,21 @@
                         <span class="header-cart-number-badge">3</span>
                         <!-- no cart -->
                         <div class="header-cart-list">
-                            <img class="header-cart-list-img" src="https://freepngimg.com/thumb/categories/1387.png" alt="">
-                            <span class="header-cart-text">Chưa Có Sản Phẩm</span>
+                            <div class="header-cart-empty" style="display: flex;">
+                                <img class="header-cart-list-img" src="https://freepngimg.com/thumb/categories/1387.png" alt="">
+                                <span class="header-cart-text">Chưa Có Sản Phẩm</span>
+                            </div>
 
                             <!-- has cart -->
-                            <div class="header-cart-has-cart">
+                            <div class="header-cart-has-cart" style="display: none;">
                                 <span class="header-cart-heading">Sản Phẩm Mới Thêm</span>
                                 <ul class="header-cart-list-has-cart">
-                                    <li class="header-cart-list-item">
-                                        <!-- <a class="header-cart-list-item-link" href=""> -->
+                                    <li class="header-cart-list-item"> 
                                             <img class="header-cart-list-item-img" src="https://down-vn.img.susercontent.com/file/b85cecd1da8d985c969009c2c60321f0_tn" alt="">
                                             <div class="header-cart-list-item-info">
                                                 <span class="header-cart-list-item-name">Máy ảnh Canon EOS RP ( Body / Kit )Máy ảnh Canon EOS RP ( Body / Kit )</span>
                                                 <span class="header-cart-list-item-price">₫29.590.000</span>
                                             </div>
-                                        <!-- </a> -->
-                                    </li>
-                                    <li class="header-cart-list-item">
-                                        <!-- <a class="header-cart-list-item-link" href=""> -->
-                                            <img class="header-cart-list-item-img" src="https://down-vn.img.susercontent.com/file/b85cecd1da8d985c969009c2c60321f0_tn" alt="">
-                                            <div class="header-cart-list-item-info">
-                                                <span class="header-cart-list-item-name">Máy ảnh Canon EOS RP ( Body / Kit )Máy ảnh Canon EOS RP ( Body / Kit )</span>
-                                                <span class="header-cart-list-item-price">₫29.590.000</span>
-                                            </div>
-                                        <!-- </a> -->
-                                    </li>
-                                    <li class="header-cart-list-item">
-                                        <!-- <a class="header-cart-list-item-link" href=""> -->
-                                            <img class="header-cart-list-item-img" src="https://down-vn.img.susercontent.com/file/b85cecd1da8d985c969009c2c60321f0_tn" alt="">
-                                            <div class="header-cart-list-item-info">
-                                                <span class="header-cart-list-item-name">Máy ảnh Canon EOS RP ( Body / Kit )Máy ảnh Canon EOS RP ( Body / Kit )</span>
-                                                <span class="header-cart-list-item-price">₫29.590.000</span>
-                                            </div>
-                                        <!-- </a> -->
                                     </li>
                                 </ul>
                                 <button class="header-cart-btn">Xem Giỏ Hàng</button>
