--- a/shop/shop.html
+++ b/shop/shop.html
@@ -61,9 +61,9 @@
                                     <i class="sort-options-icon fa-solid fa-angle-down fa-xl"></i>
                                     <ul class="sort-option-list">
                                         <li class="sort-option-item">
-                                            <a class="sort-option-link" href="" data-sort="asc">Giá: Thấp đến Cao</a></li>
+                                            <a class="sort-option-link sort-option-link-upto" href="" data-sort="asc">Giá: Thấp đến Cao</a></li>
                                         <li class="sort-option-item">
-                                            <a class="sort-option-link" href="" data-sort="desc">Giá: Cao đến Thấp</a>
+                                            <a class="sort-option-link sort-option-link-downto" href="" data-sort="desc">Giá: Cao đến Thấp</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -713,6 +713,8 @@
 
     <script src="/shop/shop.js"></script>
     <script src="/product/product.js"></script>
-    
+    <script>
+
+    </script>
 </body>
 </html>
