--- a/base/header.html
+++ b/base/header.html
@@ -92,8 +92,8 @@
                 <div class="header-searchbar">
                     <input class="header-search-input" id="searchInput" onkeypress="handleSearchInput(event)" type="text" placeholder="Đăng ký và nhận voucher bạn mới đến 70k!">
                     <div class="header-search-history">
-                        <a href="" class="header-search-history-link">Búp bê bằng bông biết bay bay bay</a>
-                        <a href="" class="header-search-history-link">Một con vịt xòe ra hai cái cánh</a>
+                        <!-- <a href="" class="header-search-history-link">Búp bê bằng bông biết bay bay bay</a>
+                        <a href="" class="header-search-history-link">Một con vịt xòe ra hai cái cánh</a> -->
                     </div>
                     <button class="search-btn" onclick="performSearch()">
                         <i class="search-logo fa-solid fa-magnifying-glass fa-xl"></i>
