--- a/product/product0.html
+++ b/product/product0.html
@@ -271,6 +271,18 @@
         </div>
     </div>
     <div id="footer"></div>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const addButton = document.querySelector(".product-contain-puttocart");
+            const emptyCart = document.querySelector(".header-cart-empty");
+            const hasCart = document.querySelector(".header-cart-has-cart");
+
+            addButton.addEventListener("click", function() {
+                emptyCart.style.display = "none";
+                hasCart.style.display = "block";
+            });
+        });
+    </script>
     <script src="/product/product.js"></script>
 </body>
 </html>
