--- a/base/header.html
+++ b/base/header.html
@@ -136,7 +136,7 @@
                 <div class="header-cart">
                     <a class="cart-link" href="">
                         <i class="cart-logo fa-solid fa-cart-shopping fa-2xl"></i>
-                        <span class="header-cart-number-badge">3</span>
+                        <span class="header-cart-number-badge"></span>
                         <!-- no cart -->
                         <div class="header-cart-list">
                             <div class="header-cart-empty" style="display: flex;">
