--- a/product/product0.html
+++ b/product/product0.html
@@ -70,7 +70,7 @@
                                 </div>
                                 <button class="product-soldcount-report">Tố Cáo</button>
                             </div>
-                            <div class="product-price">₫29.590.000 - ₫62.370.000</div>
+                            <div class="product-price">₫29.590.000</div>
                             <div class="product-contain">
                                 <div class="product-contain-coupon">
                                     <div class="product-contain-coupon-lable">Mã Giảm Giá Của Shop</div>
