--- a/base/header.html
+++ b/base/header.html
@@ -148,13 +148,13 @@
                             <div class="header-cart-has-cart" style="display: none;">
                                 <span class="header-cart-heading">Sản Phẩm Mới Thêm</span>
                                 <ul class="header-cart-list-has-cart">
-                                    <li class="header-cart-list-item"> 
+                                    <!-- <li class="header-cart-list-item"> 
                                             <img class="header-cart-list-item-img" src="https://down-vn.img.susercontent.com/file/b85cecd1da8d985c969009c2c60321f0_tn" alt="">
                                             <div class="header-cart-list-item-info">
                                                 <span class="header-cart-list-item-name">Máy ảnh Canon EOS RP ( Body / Kit )Máy ảnh Canon EOS RP ( Body / Kit )</span>
                                                 <span class="header-cart-list-item-price">₫29.590.000</span>
                                             </div>
-                                    </li>
+                                    </li> -->
                                 </ul>
                                 <button class="header-cart-btn">Xem Giỏ Hàng</button>
                             </div>
