--- a/index.html
+++ b/index.html
@@ -22,17 +22,50 @@
                 <div class="contain-header">
                     <div class="grid">
                         <div class="contain-header-banner">
-                            <a href="" class="contain-header-banner-left contain-header-banner-link">
-                                <img src="https://cf.shopee.vn/file/vn-50009109-5998c991932336c21bac7672fd585456_xxhdpi" alt="" class="contain-header-banner-img contain-header-banner-img1">
-                                <div class="contain-header-banner-left-btn-left"></div>
-                                <div class="contain-header-banner-left-btn-right"></div>
-                            </a>
+                            <div class="slider-container">
+                                <div class="slider">
+                                    <a href="#" class="contain-header-banner-link">
+                                        <img src="https://cf.shopee.vn/file/vn-50009109-5f8561704b78ca68ff1f6328e974922f_xxhdpi" alt="" class="contain-header-banner-img contain-header-banner-img1">
+                                    </a>
+                                    <a href="#" class="contain-header-banner-link">
+                                        <img src="https://cf.shopee.vn/file/vn-50009109-a44496d6149fefba0b4e4ce570a1a8e5_xxhdpi" alt="" class="contain-header-banner-img contain-header-banner-img1">
+                                    </a>
+                                    <a href="#" class="contain-header-banner-link">
+                                        <img src="https://cf.shopee.vn/file/vn-50009109-4f7a2b9d639f5be75a6e5fd99b5df996_xxhdpi" alt="" class="contain-header-banner-img contain-header-banner-img1">
+                                    </a>
+                                    <a href="#" class="contain-header-banner-link">
+                                        <img src="https://cf.shopee.vn/file/vn-50009109-a169c3f88c6b5570b5dd174a571f4caa_xxhdpi" alt="" class="contain-header-banner-img contain-header-banner-img1">
+                                    </a>
+                                    <a href="#" class="contain-header-banner-link">
+                                        <img src="https://cf.shopee.vn/file/vn-50009109-a7cea6c6cc9f45bb80a8a35b32e419e6_xxhdpi" alt="" class="contain-header-banner-img contain-header-banner-img1">
+                                    </a>
+                                    <a href="#" class="contain-header-banner-link">
+                                        <img src="https://cf.shopee.vn/file/vn-50009109-7ac8d2aac28f561f56b628df6f13b8e8_xxhdpi" alt="" class="contain-header-banner-img contain-header-banner-img1">
+                                    </a>
+                                    <a href="#" class="contain-header-banner-link">
+                                        <img src="https://cf.shopee.vn/file/vn-50009109-2b761aebbab959ef94d25e73217e5d83_xxhdpi" alt="" class="contain-header-banner-img contain-header-banner-img1">
+                                    </a>
+                                    <a href="#" class="contain-header-banner-link">
+                                        <img src="https://cf.shopee.vn/file/vn-50009109-ef9f7139c34cf50466510055f54bcbe6_xxhdpi" alt="" class="contain-header-banner-img contain-header-banner-img1">
+                                    </a>
+                                    <a href="#" class="contain-header-banner-link">
+                                        <img src="https://cf.shopee.vn/file/vn-50009109-99ce4cdbc6d09231657629b34f11c079_xxhdpi" alt="" class="contain-header-banner-img contain-header-banner-img1">
+                                    </a>
+                                    <!-- Thêm hình ảnh khác vào đây -->
+                                </div>
+                                <button class="contain-header-banner-btn contain-header-banner-left-btn-left" id="prevBtn">
+                                    <i class="fa-solid fa-chevron-left"></i>
+                                </button>
+                                <button class="contain-header-banner-btn contain-header-banner-left-btn-right" id="nextBtn">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </button>
+                            </div>
                              <div class="contain-header-banner-right">
                                  <a href="" class="contain-header-banner-link">
-                                     <img src="https://cf.shopee.vn/file/vn-50009109-957497f8dc8f42a4cc1f39832a93cfb9_xhdpi" alt="" class="contain-header-banner-img contain-header-banner-img2">
+                                     <img src="https://cf.shopee.vn/file/vn-50009109-ff9e0ce0525931a6eb368d1e457cea69_xhdpi" alt="" class="contain-header-banner-img contain-header-banner-img2">
                                  </a>
                                  <a href="" class="contain-header-banner-link">
-                                     <img src="https://cf.shopee.vn/file/vn-50009109-4e7e3f81f2477d0e6a2a29fe213a98b8_xhdpi" alt="" class="contain-header-banner-img contain-header-banner-img3">
+                                     <img src="https://cf.shopee.vn/file/vn-50009109-e2487c1b9e25cd3bd9e345b9d6001bbe_xhdpi" alt="" class="contain-header-banner-img contain-header-banner-img3">
                                  </a>
                              </div>
                         </div>
@@ -258,11 +291,6 @@
         </div>
         <div id="footer"></div>
     </div>
-    <script>
-        $(function() {
-            $("#header").load("/base/header.html");
-            $("#footer").load("/base/footer.html");
-        });
-    </script>
+    <script src="/base/index.js"></script>
 </body>
 </html>
