--- a/base/header.html
+++ b/base/header.html
@@ -140,7 +140,7 @@
                         <!-- no cart -->
                         <div class="header-cart-list">
                             <div class="header-cart-empty" style="display: flex;">
-                                <img class="header-cart-list-img" src="https://freepngimg.com/thumb/categories/1387.png" alt="">
+                                <img class="header-cart-list-img" src="https://media.tenor.com/9zmtHZ0tIjkAAAAi/nyancat-rainbow-cat.gif" alt="">
                                 <span class="header-cart-text">Chưa Có Sản Phẩm</span>
                             </div>
 
