--- a/base/header.html
+++ b/base/header.html
@@ -9,7 +9,7 @@
                         <a class="header_navbar-item-link " href="">Trở thành Người bán Shopee</a>
                     </li>
                     <li class="header_navbar-item header_navbar-item-separate header_navbar-item-qr">
-                        <a class="header_navbar-item-link" href="">Tải ứng dụng</a>
+                        <a class="header_navbar-item-link" href="https://shopee.vn/web">Tải ứng dụng</a>
                         <div class="header_qr">
                             <img class="qr" src="/assets/img/qrcode_66607806_ce7f3ec63603e191ab71e5fdfbb55b6a.png" alt="">
                             <div class="qr_apps">
@@ -40,8 +40,8 @@
                                 <span class="notify-text">Đăng nhập để xem thông báo</span>
                             </div>
                             <footer class="footer-notify">
-                                <a class="btn-link" href="https://about-shopee.netlify.app/">Đăng Ký</a>  
-                                <a class="btn-link" href="https://about-shopee.netlify.app/">Đăng Nhập</a>   
+                                <a class="btn-link" href="https://about-shopee.netlify.app/register">Đăng Ký</a>  
+                                <a class="btn-link" href="https://about-shopee.netlify.app/login">Đăng Nhập</a>   
                             </footer>
                         </div>
                     </li>
