--- a/base/header.html
+++ b/base/header.html
@@ -40,8 +40,8 @@
                                 <span class="notify-text">Đăng nhập để xem thông báo</span>
                             </div>
                             <footer class="footer-notify">
-                                <a class="btn-link" href="https://about-shopee.netlify.app/register">Đăng Ký</a>  
-                                <a class="btn-link" href="https://about-shopee.netlify.app/login">Đăng Nhập</a>   
+                                <a class="btn-link" href="https://about-shopee.netlify.app/">Đăng Ký</a>  
+                                <a class="btn-link" href="https://about-shopee.netlify.app/">Đăng Nhập</a>   
                             </footer>
                         </div>
                     </li>
