--- a/product/product4.html
+++ b/product/product4.html
@@ -279,6 +279,6 @@
         </div>
     </div>
     <div id="footer"></div>
-    <script src="/product/product.js"></script>
+    <script src="/assets/js/product.js"></script>
 </body>
 </html>
