--- a/index.html
+++ b/index.html
@@ -291,6 +291,6 @@
         </div>
         <div id="footer"></div>
     </div>
-    <script src="/base/index.js"></script>
+    <script src="/assets/js/index.js"></script>
 </body>
 </html>
