--- a/product/product0.html
+++ b/product/product0.html
@@ -283,6 +283,6 @@
             });
         });
     </script>
-    <script src="/product/product.js"></script>
+    <script src="/assets/js/product.js"></script>
 </body>
 </html>
