--- a/product/product1.html
+++ b/product/product1.html
@@ -319,7 +319,7 @@
           </div>
       </div>
       <div id="footer"></div>
-    <script src="/product/product.js"></script>
+    <script src="/assets/js/product.js"></script>
 </body>
 </html>      
         
