--- a/product/product3.html
+++ b/product/product3.html
@@ -284,7 +284,7 @@
         </div>
     </div>
     <div id="footer"></div>
-    <script src="/product/product.js"></script>
+    <script src="/assets/js/product.js"></script>
 </body>
 </html>
         
