--- a/shop/shop.html
+++ b/shop/shop.html
@@ -711,8 +711,8 @@
         <div id="footer"></div>
     </div>
 
-    <script src="/shop/shop.js"></script>
-    <script src="/product/product.js"></script>
+    <script src="/assets/js/shop.js"></script>
+    <script src="/assets/js/product.js"></script>
     <script>
 
     </script>
