--- a/base/header.html
+++ b/base/header.html
@@ -1,3 +1,6 @@
+<!-- 
+    Author: Trần Nguyễn Khánh Hoàng 
+-->    
     <header class="header">
         <div class="grid header-center">
             <nav class="header_navbar">
