--- a/base/footer.html
+++ b/base/footer.html
@@ -1,4 +1,7 @@
-    <footer class="footer">
+<!-- 
+    Author: Trần Nguyễn Khánh Hoàng 
+-->
+<footer class="footer">
         <div class="grid__full-width">
             <div class="footer-header"></div>
             <div class="footer-container">
